# ArmCMakeTemplate-vscode

./: .gitignore  CMakeLists.txt  README.md
source/: version.h
source/App/: CMakeLists.txt  main.c
source/App/TestApp1/: CMakeLists.txt
source/App/TestApp1/source/: usart.c
source/App/include/: stm32f3xx_hal_conf.h
source/Lib/: CMakeLists.txt  RTE_Components.h
source/Lib/CMSIS/: CMakeLists.txt
source/Lib/STM32F3xx_HAL_Driver/: CMakeLists.txt
